# pyro-may2023

./: README.md  pyproject.toml  requirements.txt
assets/: media_prepped.parquet  sales_prepped.parquet
solutions/: Part 2 - Variational Autoencoder - Full Example.ipynb
workshop/: Introduction_to_Pyro_PyLadies.pptx  Part 1 - Linear Modelling with Pyro - Empty Template.ipynb  Part 2 - Variational Autoencoder - Empty Template.ipynb  PyTorch Cheat Sheet.ipynb
